# cli-examples

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cli/: __main__.py
cli/00-dump-argv/: __main__.py
cli/10-argv/: __main__.py
cli/30-typer/: __main__.py
cli/argparse_example/: __main__.py
cli/argv_example/: __main__.py
cli/click_example/: __main__.py
cli/dump_argv/: __main__.py
cli/example0/: __main__.py  main.py
cli/example1/: README.md  __main__.py  main.py
cli/example2/: __main__.py  main.py
cli/typer_example/: __main__.py
test/: conftest.py
