[tool.poetry]
name = "cli"
version = "0.1.0"
description = "A selection of CLI examples"
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]

[tool.poetry.scripts]
dump = "cli.dump_argv.__main__:main"
cli0 = "cli.argv_example.__main__:main"
cli1 = "cli.argparse_example.__main__:main"
cli2 = "cli.typer_example.__main__:cli"


[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
rich-cli = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
